plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.pilleasychat'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	testImplementation "org.testcontainers:chromadb:1.19.8"
	implementation group: 'org.testcontainers', name: 'chromadb', version: '1.19.8'
	implementation group: 'dev.langchain4j', name: 'langchain4j-chroma', version: '0.31.0'
	implementation 'org.apache.pdfbox:pdfbox:2.0.31'
	implementation group: 'dev.langchain4j', name: 'langchain4j-core', version: '0.28.0'
	implementation group: 'dev.langchain4j', name: 'langchain4j-open-ai-spring-boot-starter', version: '0.30.1'
	implementation group: 'dev.langchain4j', name: 'langchain4j-open-ai', version: '0.28.0'
	implementation group: 'dev.langchain4j', name: 'langchain4j', version: '0.28.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql:42.5.0'
//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
